objects/Filter__c.object
<CustomObject>
    <description>Used to store user-defined filter colletions in JSON format.</description>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>Filtering parameters stored in JSON format.</description>
        <label>Parameters</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <label>Pipeline</label>
        <referenceTo>Deployment_Flow__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Share_With__c</fullName>
        <label>Share With</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Me</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Filter</label>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>